--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-base64 = "0.22.1"
-chrono = "0.4.39"
-hex = "0.4.3"
-md-5 = "0.10.6"
-reqwest = { version = "0.12.12", features = ["blocking", "json"] }
-serde_json = "1.0.135"
-uuid = { version = "1.11.1", features = ["v4", "serde"] }
+aes = "0.8"
+base64 = "0.22"
+chrono = "0.4"
+hex = "0.4"
+md-5 = "0.10"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
+serde_json = "1.0"
+uuid = { version = "1.11", features = ["v4", "serde"] }
