--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,15 @@ edition = "2021"
 [dependencies]
 aes = "0.8"
 base64 = "0.22"
+block-modes = "0.8"
+block-padding = "0.3"
 chrono = "0.4"
+cipher = "0.4"
+des = "0.8"
+flate2 = "1.0"
 hex = "0.4"
 md-5 = "0.10"
+openssl = "0.10"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde_json = "1.0"
 uuid = { version = "1.11", features = ["v4", "serde"] }
