--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ block-modes = "0.8"
 block-padding = "0.3"
 chrono = "0.4"
 cipher = "0.4"
-des = "0.8"
+des = "0.8.1"
 flate2 = "1.0"
+generic-array = "1.2.0"
 hex = "0.4"
 md-5 = "0.10"
 openssl = "0.10"
