--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 [dependencies]
 base64 = "0.22"
 chrono = "0.4"
+cipher = { version = "0.4", features = ["block-padding"] }
 des = "0.8.1"
 flate2 = "1.0"
+hex = "0.4.3"
 md-5 = "0.10"
 openssl = "0.10"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
