--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 base64 = "0.22"
 chrono = "0.4"
 cipher = { version = "0.4", features = ["block-padding"] }
-des = "0.8.1"
+des = "0.8"
 flate2 = "1.0"
-hex = "0.4.3"
+hex = "0.4"
+hmac = "0.12"
 md-5 = "0.10"
 openssl = "0.10"
 reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde_json = "1.0"
+sha2 = "0.10"
+url = "2.5"
 uuid = { version = "1.11", features = ["v4", "serde"] }
