--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -108,5 +108,5 @@ jobs:
         run: |
           for file in artifacts/*/*; do
             echo "Uploading $file to ${{ steps.create_release.outputs.tag_name }}"
-            gh release upload ${{ steps.create_release.outputs.upload_url }} "$file" --clobber
+            gh release upload ${{ steps.create_release.outputs.tag_name }} "$file" --clobber || echo "Failed to upload $file"
           done
