--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       PROJECT_NAME: Skland-Auto-Sign-In
+      VERSION: ${{ github.event.inputs.tag_name }}
     strategy:
       fail-fast: false
       matrix:
@@ -37,7 +38,7 @@ jobs:
       - name: Install OpenSSL dev (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          choco install openssl -y
+          choco install -y openssl
 
       - name: Install Rust
         uses: actions-rs/toolchain@v1
@@ -64,16 +65,12 @@ jobs:
           args: --release --target ${{ matrix.target }}
 
       - name: Rename artifact
-        env:
-          VERSION: ${{ github.event.inputs.tag_name }}
         shell: bash
         run: |
           mv target/${{ matrix.target }}/release/${{ env.PROJECT_NAME }}${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }} ${{ env.PROJECT_NAME }}-${{ env.VERSION }}-${{ matrix.target-label }}${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }}
       
       - name: Upload artifact
         uses: actions/upload-artifact@v3
-        env:
-          VERSION: ${{ github.event.inputs.tag_name }}
         with:
           name: ${{ env.PROJECT_NAME }}-${{ env.VERSION }}-${{ matrix.target-label }}
           path: ${{ env.PROJECT_NAME }}-${{ env.VERSION }}-${{ matrix.target-label }}${{ matrix.target == 'x86_64-pc-windows-msvc' && '.exe' || '' }}
@@ -84,6 +81,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROJECT_NAME: Skland-Auto-Sign-In
+      VERSION: ${{ github.event.inputs.tag_name }}
+    strategy:
+      matrix:
+        file:
+          - path: 
 
     steps:
       - name: Create Release
@@ -102,11 +104,11 @@ jobs:
         with:
           path: artifacts
 
-      - name: Upload release assets
+      - name: Upload release assets (using a script)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for file in artifacts/*/*; do
-            echo "Uploading $file to ${{ steps.create_release.outputs.tag_name }}"
-            gh release upload ${{ steps.create_release.outputs.tag_name }} "$file" --clobber || echo "Failed to upload $file"
+          for file in ./artifacts/*; do
+            filename=$(basename "$file")
+            gh release upload ${{ github.event.inputs.tag_name }} "$file" --clobber --label "$filename"
           done
