--- a/.github/workflows/Scheduled Auto Sign In.yml
+++ b/.github/workflows/Scheduled Auto Sign In.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: '5 16 * * *'
   workflow_dispatch:
+    inputs:
+      manual_debug:
+        description: 'Enable manual debug'
+        required: false
+        default: 'false'
 
 jobs:
   auto-sign-in:
@@ -29,5 +34,6 @@ jobs:
       - name: Run sign-in program
         env:
           USER_TOKENS: ${{ secrets.USER_TOKENS }}
+          MANUAL_DEBUG: ${{ github.event.inputs.manual_debug }}
           RUST_BACKTRACE: full
         run: ./sign-in-program
