新增若无release则自动build并release功能

--- a/.github/workflows/Build and Release (Linux-x64 Only).yml
+++ b/.github/workflows/Build and Release (Linux-x64 Only).yml
@@ -10,7 +10,7 @@ on:
         description: 'Enter a description for this release'
         required: false
       retrigger_sign_in:
-        description: 'Just leave it blank'
+        description: 'Just leave it as it is'
         required: false
         default: 'false'
 
