--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ flate2 = "1.0"
 hex = "0.4"
 hmac = "0.12"
 md-5 = "0.10"
+once_cell = "1.21"
 openssl = "0.10"
 reqwest = { version = "0.12", features = ["blocking", "gzip", "json"] }
 serde_json = "1.0"
